[package]
name = "site"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
argon2 = { version = "0.5.3", features = [] }
clia-tracing-config = "0.2.7"
jsonwebtoken = "9.2.0"
once_cell = "1.19.0"
rand = { version = "0.8.5", features = [] }
rust-embed = "8.0.0"
salvo = { version = "0.72.4", features = ["anyhow", "logging", "cors", "oapi", "jwt-auth", "rustls", "catch-panic", "cookie", "serve-static", "test", "quinn"] }
sea-orm = { version = "1.0.1", features = ["runtime-tokio-native-tls", "sqlx-postgres"] }
serde = "1.0.210"
serde_yaml_ok = "0.9.36"
thiserror = "1.0.57"
time = "0.3.28"
tokio = { version = "1.40.0", features = ["full"] }
tracing = "0.1"
uuid = { version = "1.4.1", features = ["v4", "fast-rng", "macro-diagnostics"] }
validator = { version = "0.18", features = ["derive"] }
rust-i18n = "3.1.2"
rust-i18n-macro = "3.1.2"
rust-i18n-support = "3.1.2"
lazy_static = "1.5.0"

[package.metadata.i18n]
available-locales = ["en", "id"]
default-locale = "en"